eserde/tests/compile_fail/default_unimplemented.stderr
error[E0277]: the trait bound `NoDefault: Default` is not satisfied
 --> tests/compile_fail/default_unimplemented.rs:3:5
  |
3 |     #[serde(default)]
  |     ^ the trait `Default` is not implemented for `NoDefault`
  |
help: consider annotating `NoDefault` with `#[derive(Default)]`
  |
8 + #[derive(Default)]
9 | struct NoDefault;
  |

error[E0277]: the trait bound `NoDefault: Default` is not satisfied
 --> tests/compile_fail/default_unimplemented.rs:1:10
  |
1 | #[derive(eserde::Deserialize)]
  |          ^^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `NoDefault`
  |
  = note: this error originates in the derive macro `::eserde::_serde::Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `NoDefault` with `#[derive(Default)]`
  |
8 + #[derive(Default)]
9 | struct NoDefault;
  |
